# Qwen3-VL-30B-A3B

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  backend-critique.md  frontend-handover.md  frontend-instructions.md  run.py  run_linter.py
backend/: .env.example  GEMINI.md  pyproject.toml  requirements.txt  ruff.toml  run.py
backend/app/: GEMINI.md  __init__.py  config.py  dependencies.py  main.py
backend/app/api/: GEMINI.md  router.py
backend/app/api/v1/: CLAUDE.md  chat.py  functions.py  health.py  images.py  models.py  sessions.py  ws.py
backend/app/middleware/: CLAUDE.md  error_handler.py  observability.py  rate_limiter.py  request_id.py
backend/app/models/: GEMINI.md
backend/app/models/domain/: CLAUDE.md  __init__.py  message.py  session.py
backend/app/models/schemas/: CLAUDE.md  __init__.py  chat.py  common.py  session.py
backend/app/postgres/: __init__.py  client.py
backend/app/redis/: CLAUDE.md  __init__.py  client.py  keys.py  queue.py  rate_limiter.py
backend/app/services/: CLAUDE.md  web_access.py
backend/app/services/embeddings/: __init__.py  service.py  vector_store.py
backend/app/services/functions/: __init__.py  executor.py  registry.py
backend/app/services/image/: GEMINI.md  __init__.py  cache.py  converter.py  processor.py
backend/app/services/llm/: CLAUDE.md  client.py  context.py  fallback_manager.py  message_builder.py  model_registry.py  prompts.py  qwen_client.py  streaming.py  summarizer.py  token_utils.py
backend/app/services/media/: __init__.py  (+3 more)
backend/scripts/: CLAUDE.md  redis_server.py  worker.py
(+99 files in other folders)
